tests/ui/reject_generics.stderr
error: #[pyclass] cannot have generic parameters. For an explanation, see https://github.com/abdulwahed-sweden/pyforge/v0.1.0/class.html#no-generic-parameters
 --> tests/ui/reject_generics.rs:4:25
  |
4 | struct ClassWithGenerics<A> {
  |                         ^

error: #[pyclass] cannot have lifetime parameters. For an explanation, see https://github.com/abdulwahed-sweden/pyforge/v0.1.0/class.html#no-lifetime-parameters
 --> tests/ui/reject_generics.rs:9:27
  |
9 | struct ClassWithLifetimes<'a> {
  |                           ^^
